// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip component  Should match the snapshot when is multiline 1`] = `
<DocumentFragment>
  .Tooltip-module__tooltip-wrapper___QIZP9 {
  clear: left;
  float: left;
  position: relative;
  width: unset;
}

.Tooltip-module__tooltip-wrapper-multiline___-JxiN {
  width: -moz-max-content;
  width: max-content;
}

.Tooltip-module__tip___OwJfd {
  background-color: var(--qtm-colors-neutral-700);
  border-color: var(--qtm-colors-neutral-700);
  border-radius: 4px;
  color: var(--qtm-colors-neutral-100);
  font-size: var(--qtm-base-font-size);
  font-weight: 700;
  line-height: 0;
  opacity: 0;
  padding: var(--qtm-spacing-xsmall);
  position: absolute;
  text-align: center;
  transition: opacity .2s ease-in-out,visibility .2s ease-in-out;
  visibility: hidden;
  z-index: 100;
}

.Tooltip-module__tip-top___Eh2V4 {
  bottom: var(--tip-position-distance);
}

.Tooltip-module__tip-bottom___-XQIh,
.Tooltip-module__tip-top___Eh2V4 {
  left: var(--tip-percentage-x);
  transform: translateX(calc(var(--tip-percentage-x)*-1));
}

.Tooltip-module__tip-visible___ycDZa {
  opacity: 1;
  visibility: visible;
}

.Tooltip-module__tip-text___fFkEj {
  display: inline-block;
  line-height: 20px;
  max-width: 250px;
  overflow: hidden;
  text-align: unset;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.Tooltip-module__tip-text-multiline___KNloF {
  max-width: unset;
  text-align: left;
  white-space: pre;
}

<div
    class="Tooltip-module__tooltip-wrapper___QIZP9 Tooltip-module__tooltip-wrapper-multiline___-JxiN"
  >
    <div
      class="Tooltip-module__tip___OwJfd Tooltip-module__tip-top___Eh2V4 Tooltip-module__tip-visible___ycDZa"
    >
      <span
        class="Tooltip-module__tip-text___fFkEj Tooltip-module__tip-text-multiline___KNloF"
      >
        Lorem ipsum dolor sit amet, 
consectetur adipiscing elit. 
Aenean bibendum facilisis sem viverra fringilla. 
Suspendisse finibus libero nec justo semper.
      </span>
    </div>
    Hover me
  </div>
</DocumentFragment>
`;

exports[`Tooltip component  Should match the snapshot when is not multiline 1`] = `
<DocumentFragment>
  .Tooltip-module__tooltip-wrapper___QIZP9 {
  clear: left;
  float: left;
  position: relative;
  width: unset;
}

.Tooltip-module__tip___OwJfd {
  background-color: var(--qtm-colors-neutral-700);
  border-color: var(--qtm-colors-neutral-700);
  border-radius: 4px;
  color: var(--qtm-colors-neutral-100);
  font-size: var(--qtm-base-font-size);
  font-weight: 700;
  line-height: 0;
  opacity: 0;
  padding: var(--qtm-spacing-xsmall);
  position: absolute;
  text-align: center;
  transition: opacity .2s ease-in-out,visibility .2s ease-in-out;
  visibility: hidden;
  z-index: 100;
}

.Tooltip-module__tip-top___Eh2V4 {
  bottom: var(--tip-position-distance);
}

.Tooltip-module__tip-bottom___-XQIh,
.Tooltip-module__tip-top___Eh2V4 {
  left: var(--tip-percentage-x);
  transform: translateX(calc(var(--tip-percentage-x)*-1));
}

.Tooltip-module__tip-visible___ycDZa {
  opacity: 1;
  visibility: visible;
}

.Tooltip-module__tip-text___fFkEj {
  display: inline-block;
  line-height: 20px;
  max-width: 250px;
  overflow: hidden;
  text-align: unset;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
    class="Tooltip-module__tooltip-wrapper___QIZP9"
  >
    <div
      class="Tooltip-module__tip___OwJfd Tooltip-module__tip-top___Eh2V4 Tooltip-module__tip-visible___ycDZa"
    >
      <span
        class="Tooltip-module__tip-text___fFkEj"
      >
        Lorem ipsum dolor sit amet, 
consectetur adipiscing elit. 
Aenean bibendum facilisis sem viverra fringilla. 
Suspendisse finibus libero nec justo semper.
      </span>
    </div>
    Hover me
  </div>
</DocumentFragment>
`;

exports[`Tooltip component  Should match the snapshot when place is bottom 1`] = `
<DocumentFragment>
  .Tooltip-module__tooltip-wrapper___QIZP9 {
  clear: left;
  float: left;
  position: relative;
  width: unset;
}

.Tooltip-module__tip___OwJfd {
  background-color: var(--qtm-colors-neutral-700);
  border-color: var(--qtm-colors-neutral-700);
  border-radius: 4px;
  color: var(--qtm-colors-neutral-100);
  font-size: var(--qtm-base-font-size);
  font-weight: 700;
  line-height: 0;
  opacity: 0;
  padding: var(--qtm-spacing-xsmall);
  position: absolute;
  text-align: center;
  transition: opacity .2s ease-in-out,visibility .2s ease-in-out;
  visibility: hidden;
  z-index: 100;
}

.Tooltip-module__tip-top___Eh2V4 {
  bottom: var(--tip-position-distance);
}

.Tooltip-module__tip-bottom___-XQIh,
.Tooltip-module__tip-top___Eh2V4 {
  left: var(--tip-percentage-x);
  transform: translateX(calc(var(--tip-percentage-x)*-1));
}

.Tooltip-module__tip-visible___ycDZa {
  opacity: 1;
  visibility: visible;
}

.Tooltip-module__tip-text___fFkEj {
  display: inline-block;
  line-height: 20px;
  max-width: 250px;
  overflow: hidden;
  text-align: unset;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
    class="Tooltip-module__tooltip-wrapper___QIZP9"
    place="bottom"
  >
    <div
      class="Tooltip-module__tip___OwJfd Tooltip-module__tip-top___Eh2V4 Tooltip-module__tip-visible___ycDZa"
    >
      <span
        class="Tooltip-module__tip-text___fFkEj"
      >
        This is a hint
      </span>
    </div>
    Hover me
  </div>
</DocumentFragment>
`;

exports[`Tooltip component  Should match the snapshot when place is left 1`] = `
<DocumentFragment>
  .Tooltip-module__tooltip-wrapper___QIZP9 {
  clear: left;
  float: left;
  position: relative;
  width: unset;
}

.Tooltip-module__tip___OwJfd {
  background-color: var(--qtm-colors-neutral-700);
  border-color: var(--qtm-colors-neutral-700);
  border-radius: 4px;
  color: var(--qtm-colors-neutral-100);
  font-size: var(--qtm-base-font-size);
  font-weight: 700;
  line-height: 0;
  opacity: 0;
  padding: var(--qtm-spacing-xsmall);
  position: absolute;
  text-align: center;
  transition: opacity .2s ease-in-out,visibility .2s ease-in-out;
  visibility: hidden;
  z-index: 100;
}

.Tooltip-module__tip-top___Eh2V4 {
  bottom: var(--tip-position-distance);
}

.Tooltip-module__tip-bottom___-XQIh,
.Tooltip-module__tip-top___Eh2V4 {
  left: var(--tip-percentage-x);
  transform: translateX(calc(var(--tip-percentage-x)*-1));
}

.Tooltip-module__tip-visible___ycDZa {
  opacity: 1;
  visibility: visible;
}

.Tooltip-module__tip-text___fFkEj {
  display: inline-block;
  line-height: 20px;
  max-width: 250px;
  overflow: hidden;
  text-align: unset;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
    class="Tooltip-module__tooltip-wrapper___QIZP9"
    place="left"
  >
    <div
      class="Tooltip-module__tip___OwJfd Tooltip-module__tip-top___Eh2V4 Tooltip-module__tip-visible___ycDZa"
    >
      <span
        class="Tooltip-module__tip-text___fFkEj"
      >
        This is a hint
      </span>
    </div>
    Hover me
  </div>
</DocumentFragment>
`;

exports[`Tooltip component  Should match the snapshot when place is right 1`] = `
<DocumentFragment>
  .Tooltip-module__tooltip-wrapper___QIZP9 {
  clear: left;
  float: left;
  position: relative;
  width: unset;
}

.Tooltip-module__tip___OwJfd {
  background-color: var(--qtm-colors-neutral-700);
  border-color: var(--qtm-colors-neutral-700);
  border-radius: 4px;
  color: var(--qtm-colors-neutral-100);
  font-size: var(--qtm-base-font-size);
  font-weight: 700;
  line-height: 0;
  opacity: 0;
  padding: var(--qtm-spacing-xsmall);
  position: absolute;
  text-align: center;
  transition: opacity .2s ease-in-out,visibility .2s ease-in-out;
  visibility: hidden;
  z-index: 100;
}

.Tooltip-module__tip-top___Eh2V4 {
  bottom: var(--tip-position-distance);
}

.Tooltip-module__tip-bottom___-XQIh,
.Tooltip-module__tip-top___Eh2V4 {
  left: var(--tip-percentage-x);
  transform: translateX(calc(var(--tip-percentage-x)*-1));
}

.Tooltip-module__tip-visible___ycDZa {
  opacity: 1;
  visibility: visible;
}

.Tooltip-module__tip-text___fFkEj {
  display: inline-block;
  line-height: 20px;
  max-width: 250px;
  overflow: hidden;
  text-align: unset;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
    class="Tooltip-module__tooltip-wrapper___QIZP9"
    place="right"
  >
    <div
      class="Tooltip-module__tip___OwJfd Tooltip-module__tip-top___Eh2V4 Tooltip-module__tip-visible___ycDZa"
    >
      <span
        class="Tooltip-module__tip-text___fFkEj"
      >
        This is a hint
      </span>
    </div>
    Hover me
  </div>
</DocumentFragment>
`;

exports[`Tooltip component  Should match the snapshot when place is top 1`] = `
<DocumentFragment>
  .Tooltip-module__tooltip-wrapper___QIZP9 {
  clear: left;
  float: left;
  position: relative;
  width: unset;
}

.Tooltip-module__tip___OwJfd {
  background-color: var(--qtm-colors-neutral-700);
  border-color: var(--qtm-colors-neutral-700);
  border-radius: 4px;
  color: var(--qtm-colors-neutral-100);
  font-size: var(--qtm-base-font-size);
  font-weight: 700;
  line-height: 0;
  opacity: 0;
  padding: var(--qtm-spacing-xsmall);
  position: absolute;
  text-align: center;
  transition: opacity .2s ease-in-out,visibility .2s ease-in-out;
  visibility: hidden;
  z-index: 100;
}

.Tooltip-module__tip-top___Eh2V4 {
  bottom: var(--tip-position-distance);
}

.Tooltip-module__tip-bottom___-XQIh,
.Tooltip-module__tip-top___Eh2V4 {
  left: var(--tip-percentage-x);
  transform: translateX(calc(var(--tip-percentage-x)*-1));
}

.Tooltip-module__tip-visible___ycDZa {
  opacity: 1;
  visibility: visible;
}

.Tooltip-module__tip-text___fFkEj {
  display: inline-block;
  line-height: 20px;
  max-width: 250px;
  overflow: hidden;
  text-align: unset;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
    class="Tooltip-module__tooltip-wrapper___QIZP9"
    place="top"
  >
    <div
      class="Tooltip-module__tip___OwJfd Tooltip-module__tip-top___Eh2V4 Tooltip-module__tip-visible___ycDZa"
    >
      <span
        class="Tooltip-module__tip-text___fFkEj"
      >
        This is a hint
      </span>
    </div>
    Hover me
  </div>
</DocumentFragment>
`;

exports[`Tooltip component  Should match the snapshot when text is html elements 1`] = `
<DocumentFragment>
  .Tooltip-module__tooltip-wrapper___QIZP9 {
  clear: left;
  float: left;
  position: relative;
  width: unset;
}

.Tooltip-module__tip___OwJfd {
  background-color: var(--qtm-colors-neutral-700);
  border-color: var(--qtm-colors-neutral-700);
  border-radius: 4px;
  color: var(--qtm-colors-neutral-100);
  font-size: var(--qtm-base-font-size);
  font-weight: 700;
  line-height: 0;
  opacity: 0;
  padding: var(--qtm-spacing-xsmall);
  position: absolute;
  text-align: center;
  transition: opacity .2s ease-in-out,visibility .2s ease-in-out;
  visibility: hidden;
  z-index: 100;
}

.Tooltip-module__tip-top___Eh2V4 {
  bottom: var(--tip-position-distance);
}

.Tooltip-module__tip-bottom___-XQIh,
.Tooltip-module__tip-top___Eh2V4 {
  left: var(--tip-percentage-x);
  transform: translateX(calc(var(--tip-percentage-x)*-1));
}

.Tooltip-module__tip-visible___ycDZa {
  opacity: 1;
  visibility: visible;
}

.Tooltip-module__tip-text___fFkEj {
  display: inline-block;
  line-height: 20px;
  max-width: 250px;
  overflow: hidden;
  text-align: unset;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
    class="Tooltip-module__tooltip-wrapper___QIZP9"
  >
    <div
      class="Tooltip-module__tip___OwJfd Tooltip-module__tip-top___Eh2V4 Tooltip-module__tip-visible___ycDZa"
    >
      <span
        class="Tooltip-module__tip-text___fFkEj"
      >
        <p>
          <i>
            Lorem ipsum dolor sit amet 
          </i>
          <a
            href="/"
            style="color: rgb(12, 192, 234);"
          >
            consectetur
          </a>
        </p>
      </span>
    </div>
    Hover me
  </div>
</DocumentFragment>
`;
